# gcp-finops-dashboard

./: .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  gcp-finops.example.toml  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  release-binaries.yml  release-please.yml  release.yml
deploy/helm/gcp-finops-dashboard/: Chart.yaml  values.yaml
deploy/helm/gcp-finops-dashboard/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
deploy/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
packaging/: pyinstaller_entry.py
src/gcp_finops_dashboard/: __init__.py  __main__.py  audit.py  auth.py  bigquery_client.py  budgets.py  cli.py  config.py  dashboard.py  models.py  notifications.py  projects.py  queries.py  sample_data.py  visualize.py
src/gcp_finops_dashboard/exporters/: __init__.py  base.py  csv_exporter.py  json_exporter.py  pdf_exporter.py
tests/: conftest.py  test_audit.py  test_auth.py  test_bigquery_client.py  test_budgets.py  test_cli.py  test_config.py  test_dashboard.py  test_exporters.py  test_notifications.py  test_projects.py  test_queries.py
